# OpenGL-Rust

./: Cargo.toml  texture.frag.glsl  texture.vert.glsl
src/: main.rs  opengl_index_buffer.rs  opengl_shader.rs  opengl_texture.rs  opengl_vertex_array.rs  opengl_vertex_buffer.rs  shader.rs  vector2.rs  vector3.rs  vertex.rs
