[package]
name = "open_gl"
version = "0.1.0"
authors = ["HomelikeBrick42 <64717463+HomelikeBrick42@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.41.0"
gl = "0.14.0"
num = "0.4.0"
image = "0.23.14"
